--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "parker-smart-wallet",
   "private": true,
-  "version": "1.0.0",
+  "version": "1.0.2",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -12,8 +12,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "firebase": "^10.7.1",
-    "lucide-react": "^0.294.0",
-    "recharts": "^2.10.3"
+    "lucide-react": "^0.344.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
