--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "parker-smart-wallet",
   "private": true,
-  "version": "1.0.2",
+  "version": "2.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -12,7 +12,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "firebase": "^10.7.1",
-    "lucide-react": "^0.344.0"
+    "lucide-react": "^0.344.0",
+    "recharts": "^2.12.0",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
+    "date-fns": "^3.3.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
